--- a/graph.css
+++ b/graph.css
@@ -1,11 +1,4 @@
 * {
-  padding: 0;
-  margin: 0;
-}
-
-.graph {
-  margin: 60px auto;
-  width: 900px;
-  height: 300px;
-  align-items: center;
+  text-align: center;
+  margin: 20px;
 }
